--- a/Group2WPF/AirlineWindow.xaml
+++ b/Group2WPF/AirlineWindow.xaml
@@ -109,7 +109,7 @@
             </Grid.ColumnDefinitions>
 
             <Label Content="ID:" Grid.Row="0" Grid.Column="0" VerticalAlignment="Center" Style="{StaticResource FormLabelStyle}"/>
-            <TextBox x:Name="txtId" Text="{Binding SelectedItem.Id, ElementName=DataGridAirline}" Grid.Row="0" Grid.Column="1" Style="{StaticResource FormTextBoxStyle}"/>
+            <TextBox x:Name="txtId" Text="{Binding SelectedItem.Id, ElementName=DataGridAirline}" Grid.Row="0" Grid.Column="1" IsEnabled="False" Style="{StaticResource FormTextBoxStyle}"/>
 
             <Label Content="Code:" Grid.Row="1" Grid.Column="0" VerticalAlignment="Center" Style="{StaticResource FormLabelStyle}"/>
             <TextBox x:Name="txtCode" Text="{Binding SelectedItem.Code, ElementName=DataGridAirline}" Grid.Row="1" Grid.Column="1" Style="{StaticResource FormTextBoxStyle}"/>
