--- a/Group2WPF/BookingPLatformWindow.xaml
+++ b/Group2WPF/BookingPLatformWindow.xaml
@@ -98,7 +98,7 @@
             </Grid.ColumnDefinitions>
 
             <Label Content="ID:" Grid.Row="0" Grid.Column="0" VerticalAlignment="Center" Style="{StaticResource FormLabelStyle}"/>
-            <TextBox x:Name="txtId" Text="{Binding SelectedItem.Id, ElementName=DataGridBookingPlatform}" Grid.Row="0" Grid.Column="1" Style="{StaticResource FormTextBoxStyle}"/>
+            <TextBox x:Name="txtId" Text="{Binding SelectedItem.Id, ElementName=DataGridBookingPlatform}" Grid.Row="0" Grid.Column="1" IsEnabled="False" Style="{StaticResource FormTextBoxStyle}"/>
 
             <Label Content="Name:" Grid.Row="1" Grid.Column="0" VerticalAlignment="Center" Style="{StaticResource FormLabelStyle}"/>
             <TextBox x:Name="txtName" Text="{Binding SelectedItem.Name, ElementName=DataGridBookingPlatform}" Grid.Row="1" Grid.Column="1" Style="{StaticResource FormTextBoxStyle}"/>
