--- a/Group2WPF/BookingWindow.xaml
+++ b/Group2WPF/BookingWindow.xaml
@@ -107,7 +107,7 @@
             </Grid.ColumnDefinitions>
 
             <Label Content="ID:" Grid.Row="0" Grid.Column="0" VerticalAlignment="Center" Style="{StaticResource FormLabelStyle}"/>
-            <TextBox x:Name="txtId" Text="{Binding SelectedItem.Id, ElementName=DataGridBooking}" Grid.Row="0" Grid.Column="1" Style="{StaticResource FormTextBoxStyle}"/>
+            <TextBox x:Name="txtId" Text="{Binding SelectedItem.Id, ElementName=DataGridBooking}" Grid.Row="0" Grid.Column="1" IsEnabled="False" Style="{StaticResource FormTextBoxStyle}"/>
 
             <Label Content="Passenger ID:" Grid.Row="1" Grid.Column="0" VerticalAlignment="Center" Style="{StaticResource FormLabelStyle}"/>
             <TextBox x:Name="txtPassengerId" Text="{Binding SelectedItem.PassengerId, ElementName=DataGridBooking}" Grid.Row="1" Grid.Column="1" Style="{StaticResource FormTextBoxStyle}"/>
