--- a/Group2WPF/PassengerWindow.xaml
+++ b/Group2WPF/PassengerWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Group2WPF"
         mc:Ignorable="d"
-        Title="Passenger Window" Height="450" Width="800"
+        Title="Passenger Window" Height="650" Width="900"
         Background="#F0F0F0">
     <Window.Resources>
         <!-- Define a button style for consistent styling -->
@@ -94,48 +94,36 @@
         </Grid>
 
         <!-- Right Column: Form and Buttons -->
-        <Grid Grid.Column="2" Margin="10">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
+        <StackPanel Grid.Column="2" Margin="10">
+            <Label Content="ID:" VerticalAlignment="Center" Style="{StaticResource FormLabelStyle}"/>
+            <TextBox x:Name="txtId" Text="{Binding SelectedItem.Id, ElementName=DataGridPassenger}" IsEnabled="False" Style="{StaticResource FormTextBoxStyle}" Margin="5"/>
 
-            <Label Content="ID:" Grid.Row="0" Grid.Column="0" VerticalAlignment="Center" Style="{StaticResource FormLabelStyle}"/>
-            <TextBox x:Name="txtId" Text="{Binding SelectedItem.Id, ElementName=DataGridPassenger}" Grid.Row="0" Grid.Column="1" Style="{StaticResource FormTextBoxStyle}"/>
+            <Label Content="First Name:" VerticalAlignment="Center" Style="{StaticResource FormLabelStyle}"/>
+            <TextBox x:Name="txtFirstName" Text="{Binding SelectedItem.FirstName, ElementName=DataGridPassenger}" Style="{StaticResource FormTextBoxStyle}" Margin="5"/>
 
-            <Label Content="First Name:" Grid.Row="1" Grid.Column="0" VerticalAlignment="Center" Style="{StaticResource FormLabelStyle}"/>
-            <TextBox x:Name="txtFirstName" Text="{Binding SelectedItem.FirstName, ElementName=DataGridPassenger}" Grid.Row="1" Grid.Column="1" Style="{StaticResource FormTextBoxStyle}"/>
+            <Label Content="Last Name:" VerticalAlignment="Center" Style="{StaticResource FormLabelStyle}"/>
+            <TextBox x:Name="txtLastName" Text="{Binding SelectedItem.LastName, ElementName=DataGridPassenger}" Style="{StaticResource FormTextBoxStyle}" Margin="5"/>
 
-            <Label Content="Last Name:" Grid.Row="2" Grid.Column="0" VerticalAlignment="Center" Style="{StaticResource FormLabelStyle}"/>
-            <TextBox x:Name="txtLastName" Text="{Binding SelectedItem.LastName, ElementName=DataGridPassenger}" Grid.Row="2" Grid.Column="1" Style="{StaticResource FormTextBoxStyle}"/>
+            <Label Content="Date of Birth:" VerticalAlignment="Center" Style="{StaticResource FormLabelStyle}"/>
+            <TextBox x:Name="txtDateOfBirth" Text="{Binding SelectedItem.DateOfBirth, ElementName=DataGridPassenger}" Style="{StaticResource FormTextBoxStyle}" Margin="5"/>
 
-            <Label Content="Date of Birth:" Grid.Row="3" Grid.Column="0" VerticalAlignment="Center" Style="{StaticResource FormLabelStyle}"/>
-            <TextBox x:Name="txtDateOfBirth" Text="{Binding SelectedItem.DateOfBirth, ElementName=DataGridPassenger}" Grid.Row="3" Grid.Column="1" Style="{StaticResource FormTextBoxStyle}"/>
+            <Label Content="Country:" VerticalAlignment="Center" Style="{StaticResource FormLabelStyle}"/>
+            <TextBox x:Name="txtCountry" Text="{Binding SelectedItem.Country, ElementName=DataGridPassenger}" Style="{StaticResource FormTextBoxStyle}" Margin="5"/>
 
-            <Label Content="Country:" Grid.Row="4" Grid.Column="0" VerticalAlignment="Center" Style="{StaticResource FormLabelStyle}"/>
-            <TextBox x:Name="txtCountry" Text="{Binding SelectedItem.Country, ElementName=DataGridPassenger}" Grid.Row="4" Grid.Column="1" Style="{StaticResource FormTextBoxStyle}"/>
+            <Label Content="Email:" VerticalAlignment="Center" Style="{StaticResource FormLabelStyle}"/>
+            <TextBox x:Name="txtEmail" Text="{Binding SelectedItem.Email, ElementName=DataGridPassenger}" Style="{StaticResource FormTextBoxStyle}" Margin="5"/>
 
-            <Label Content="Email:" Grid.Row="5" Grid.Column="0" VerticalAlignment="Center" Style="{StaticResource FormLabelStyle}"/>
-            <TextBox x:Name="txtEmail" Text="{Binding SelectedItem.Email, ElementName=DataGridPassenger}" Grid.Row="5" Grid.Column="1" Style="{StaticResource FormTextBoxStyle}"/>
-
-            <Label Content="Gender:" Grid.Row="6" Grid.Column="0" VerticalAlignment="Center" Style="{StaticResource FormLabelStyle}"/>
-            <TextBox x:Name="txtGender" Text="{Binding SelectedItem.Gender, ElementName=DataGridPassenger}" Grid.Row="6" Grid.Column="1" Style="{StaticResource FormTextBoxStyle}"/>
+            <Label Content="Gender:" VerticalAlignment="Center" Style="{StaticResource FormLabelStyle}"/>
+            <TextBox x:Name="txtGender" Text="{Binding SelectedItem.Gender, ElementName=DataGridPassenger}" Style="{StaticResource FormTextBoxStyle}" Margin="5"/>
 
             <StackPanel Orientation="Horizontal" Grid.Row="7" Grid.ColumnSpan="2" Margin="5">
-                <Button Content="Add" Click="AddButton_Click" Style="{StaticResource NavButtonStyle}" Width="60" Margin="0 5 5 0"/>
-                <Button Content="Edit" Click="EditButton_Click" Style="{StaticResource NavButtonStyle}" Width="60" Margin="0 5 5 0"/>
-                <Button Content="Delete" Click="DeleteButton_Click" Style="{StaticResource NavButtonStyle}" Width="60" Margin="0 5 5 0"/>
-                <Button Content="Clear" Click="ClearButton_Click" Style="{StaticResource NavButtonStyle}" Width="60" Margin="0 5 5 0"/>
+                <Button Content="Add" Click="AddButton_Click" Style="{StaticResource NavButtonStyle}" Width="60" Margin="5"/>
+                <Button Content="Edit" Click="EditButton_Click" Style="{StaticResource NavButtonStyle}" Width="60" Margin="5"/>
+                <Button Content="Delete" Click="DeleteButton_Click" Style="{StaticResource NavButtonStyle}" Width="60" Margin="5"/>
+                <Button Content="Clear" Click="ClearButton_Click" Style="{StaticResource NavButtonStyle}" Width="60" Margin="5"/>
             </StackPanel>
-        </Grid>
+
+        </StackPanel>
+
     </Grid>
 </Window>
