--- a/Group2WPF/FlightWindow.xaml
+++ b/Group2WPF/FlightWindow.xaml
@@ -25,6 +25,8 @@
                 <Button x:Name="btnOpenBookingPlatformWindow" Content="BookingPlatform Window" Click="OpenBookingPlatformWindow_Click" Style="{StaticResource NavButtonStyle}"/>
                 <Button x:Name="btnOpenFlightWindow" Content="Flight Window" Click="OpenFlightWindow_Click" Style="{StaticResource NavButtonStyle}"/>
                 <Button x:Name="btnOpenBaggageWindow" Content="Baggage Window" Click="OpenBaggageWindow_Click" Style="{StaticResource NavButtonStyle}"/>
+
+                <Button x:Name="btnShowStatistics" Content="Show Statistics" Style="{StaticResource NavButtonStyle}" Click="StatisticsButton_Click" />
                 <Button x:Name="btnLogout" Content="Logout" Click="Logout_Click" Style="{StaticResource NavButtonStyle}"/>
             </StackPanel>
         </Border>
